# bruno-rascunhos

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/blog/: ideias_posts.md  index.md
