[project]
name = "bruno-rascunhos"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno Henrique de Oliveira Rosa",email = "bruno.rosa@planejamento.mg.gov.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.18,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
